--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,10 @@
 {
-  "trailingComma": "none",
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "jsxBracketSameLine": true,
-  "proseWrap": "never",
   "endOfLine": "crlf"
 }
+
